--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -15,11 +15,11 @@ var isopen = false
 window.onload = function() {
 	console.log('window onload')
 
-	ws = new WebSocket("ws://localhost:9000")
+	ws = new WebSocket("ws://localhost:9001")
 	ws.binaryType = "arraybuffer";
 
 	ws.onopen = function() {
-	   isopen = true;
+		isopen = true;
 	}
 
 	ws.onmessage = function(e) {
@@ -39,27 +39,28 @@ window.onload = function() {
 
 var comm = {send: function(data) { ws.send(JSON.stringify(data)) } }
 
-//var datadir = '../vpython_data/'
-var datadir = 'https://s3.amazonaws.com/glowscript/fonts/' // kludge until CORS problem solved
-//window.Jupyter_VPython = datadir
+window.Jupyter_VPython = ''
 
-/*
-function fontloading() {
-    var fsans = datadir+'Roboto-Medium.ttf'
+function loadfonts() {
+	//var fsans = 'https://s3.amazonaws.com/glowscript/fonts/Roboto-Medium.ttf'
+	var fsans = 'Roboto-Medium.ttf'
     opentype_load(fsans, function(err, fontrefsans) {
+		console.log('err', err, typeof err)
         if (err) throw new Error('Font ' + fsans + ' could not be loaded: ' + err)
         window.__font_sans = fontrefsans // an opentype.js Font object
         console.log('SANS-SERIF FONT LOADED')
     })
-    var fserif = datadir+'NimbusRomNo9L-Med.otf'
+    //var fserif = 'https://s3.amazonaws.com/glowscript/fonts/NimbusRomNo9L-Med.otf'
+	var fserif = 'NimbusRomNo9L-Med.otf'
     opentype_load(fserif, function(err, fontrefserif) {
+		console.log('err', err, typeof err)
         if (err) throw new Error('Font ' + fserif + ' could not be loaded: ' + err)
         window.__font_serif = fontrefserif // an opentype.js Font object
         console.log('SERIF FONT LOADED')
     })
 }
-fontloading() // cross-origin problems if fonts local; else "decode.MACSTRING is not a function"
-*/
+//loadfonts()
+//fontloading() // cross-origin problems if fonts local; else "decode.MACSTRING is not a function"
 	  
 // The following is necessary to be able to re-run programs.
 // Otherwise the repeated execution of update_canvas() causes problems after killing Python.
@@ -143,7 +144,6 @@ var lastautoscale = true
 var interval = 30 // milliseconds
 
 function update_canvas() { // mouse location and other stuff
-console.log('update_canvas')
     "use strict";
     //var t = msclock()
     //console.log(t-tstart)
@@ -322,7 +322,6 @@ function handler(msg) {
     //console.log(msg)
     var data = decode(msg)
     if (data[0]['trigger'] !== undefined) {
-		console.log('triggered')
 		// This timer is what drives the Python program to update the data.
         if (timer !== null) clearTimeout(timer)
 		var t = msclock()
@@ -332,8 +331,8 @@ function handler(msg) {
         timer = setTimeout(update_canvas, dt)
         return
     }
-	console.log('\n\n**** '+data.length+' ******************************************')
-	for (var i=0; i<data.length; i++) console.log(JSON.stringify(data[i]))
+	//console.log('\n\n**** '+data.length+' ******************************************')
+	//for (var i=0; i<data.length; i++) console.log(JSON.stringify(data[i]))
 
     if (data.length > 0) {
         var i, j, k, cmd, attr, cfg, cfg2, vertdata, len2, len3, attr2, elems, elen, len4, S, b, vlst
