Fix minor errors, especially with trails

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -194,14 +194,12 @@ function ok(req) { ; }
 function send_pick(cvs, p, seg) {
     "use strict";
     var evt = {event: 'pick', 'canvas': cvs, 'pick': p, 'segment':seg}
-    //send_to_server(evt, ok)
 	events.push(evt)
 }
 
 function send_compound(cvs, pos, size) {
     "use strict";
     var evt = {event: '_compound', 'canvas': cvs, 'pos': [pos.x, pos.y, pos.z], 'size': [size.x, size.y, size.z]}
-    //send_to_server(evt, ok)
 	events.push(evt)
 }
 
@@ -311,7 +309,7 @@ var attrsb = {'a':'userzoom', 'b':'userspin', 'c':'range', 'd':'autoscale', 'e':
               'p':'left', 'q':'right', 'r':'top', 's':'bottom', 't':'_cloneid'}
 
 // methods are X in {'m': '23X....'}
-var methods = {'a':'select', 'c':'start', 'd':'stop', 'f':'clear', // unused beghijklmnopuvxyzCDFAB
+var methods = {'a':'select', 'b':'pos', 'c':'start', 'd':'stop', 'f':'clear', // unused eghijklmnopuvxyzCDFAB
 			   'q':'plot', 's':'add_to_trail',
                't':'follow', 'w':'clear_trail',
                'G':'bind', 'H':'unbind', 'I':'waitfor', 'J':'pause', 'K':'pick', 'L':'GSprint',
@@ -405,11 +403,12 @@ function o2vec3(p) {
 function handler(data) {
     "use strict";
 	
-	/*
+	
+	console.log('---------------')
 	for (var d in data) {
 		for (var i in data[d]) console.log(i, JSON.stringify(data[d][i]))
 	}
-	*/
+	
 	
 	if (data.cmds != []) handle_cmds(data.cmds)
 	if (data.objs != []) handle_objs(data.objs)
@@ -418,6 +417,7 @@ function handler(data) {
 
 function handle_cmds(dcmds) {
     "use strict";
+	//console.log('CMDS')
 	for (var icmds in dcmds) { // constructors, and special operations such as curve.modify
 		var cmd = dcmds[icmds]
 		var obj = cmd.cmd
@@ -603,7 +603,7 @@ function handle_cmds(dcmds) {
 			}
 			case 'attach_trail': {
 				if ( typeof cfg['_obj'] === 'string' ) {
-					var o = cfg['_obj']
+					var o = cfg['_obj'] // the string '_func'
 				} else {
 					var o = glowObjs[cfg['_obj']]
 				}
@@ -699,6 +699,7 @@ function handle_cmds(dcmds) {
 
 function handle_objs(dobjs) {
     "use strict";
+	//console.log('OBJECTS')
 	for (var idobjs in dobjs) { // attributes; cmd is ['idx':idx, 'attr':attr, 'val':val]
 		var cmd = dobjs[idobjs]
 		var idx = cmd.idx
@@ -741,6 +742,7 @@ function handle_objs(dobjs) {
 
 function handle_methods(dmeth) {
     "use strict";
+	//console.log('METHODS')
 	for (var idmeth in dmeth) { // methods; cmd is ['idx':idx, 'attr':method, 'val':val]
 		var cmd = dmeth[idmeth]
 		var idx = cmd.idx
@@ -753,8 +755,10 @@ function handle_methods(dmeth) {
 		} else if (val == 'None') {
 			if (method == 'delete') obj['remove']()
 			else obj[method]()
+		} else if (method === 'pos') {
+			glowObjs[idx]['pos'] = val
 		} else if (method === 'add_to_trail') {
-			obj.pos = val
+			obj['_func'] = val
 		} else if (method === 'bind') {
 			var evts = val.split(' ')
 			for (var evt in evts) {
